# blm

./: .gitignore  CONTRIBUTING.md  Package.swift  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum
.github/: FUNDING.yml
.github/workflows/: ci.yml
admin/: README.md  subjects.go  subjects_test.go  topics.go
apple-silicon/: .gitignore  Package.swift  README.md  check.sh
apple-silicon/Sources/Capabilities/: Router.swift  provider.swift  synthesis.swift
apple-silicon/Sources/ProviderService/: HTTP.swift  HTTPServer.swift  Routes.swift  Service.swift
apple-silicon/Sources/provider/: Daemon.swift
apple-silicon/Tests/CapabilitiesTests/: RouterTests.swift
apple-silicon/Tests/ProviderServiceTests/: HTTPServerLoopbackTests.swift  RoutesTests.swift  ServiceTests.swift
cmd/dummy/: Dockerfile  main.go
cmd/protoc-gen-fsm/: main.go
cmd/protoc-gen-rust-serde/: main.go  main_test.go
cmd/provision-schemas/: main.go
cmd/provision-topics/: main.go
cmd/sidecar/: main.go
consume/: consumer.go  consumer_test.go
dataprovider/: example_test.go  provider.go
docs/: citizens.md  contract-ownership.md  frood.md  pipelines.md  principles.md  providers.md  services.md  states.md
docs/adr/: 0001-bento-spec-freeze.md
emit/: publisher.go  publisher_test.go  registry_test.go
frood/: heartbeat.go
kube/: dummy.yaml
model/: client.go  client_test.go
proto/: README.md
proto/auth/v1/: auth.proto
proto/bento/v1/: bento.proto  embed.go
proto/dataprovider/v1/: README.md  data_provider.proto
proto/frood/v1/: frood.proto
proto/model/v1/: model.proto
proto/observability/v1/: observability.proto  schema.go
proto/sidecar/v1/: sidecar.proto
python/: conftest.py  pyproject.toml
python/birblib/: README.md  __init__.py  bento.py  dispatch.py  driver.py  handlers.py  lang.py  names.py  recipe.py  service.py  stage.py
python/frood/: __init__.py  emit.py  fsm.py  model.py  provider.py  register.py  watcher.py
python/good_citizen/: __init__.py  emit.py  fsm.py  model.py  provider.py  watcher.py
python/tests/: test_bento.py  test_dispatch.py  test_emit.py  test_fsm.py  test_handlers.py  test_lang.py  test_manifest_seam.py  test_names.py  test_never_silent.py  test_provider.py  test_recipe.py  test_register.py  test_security.py  test_service.py  test_watcher.py
scheduler/: scheduler.go
secret/: secret.go  secret_test.go
tools/lint/: no_docstrings.py
watcher/: watcher.go
watcher/git/: git.go
