[project]
# the 0.4.x line is the convergence line; 0.5 is reserved for the eventual stable tag.
# adding birblib is a 0.4.x increment, not a minor bump.
name = "big-little-mesh-frood"
version = "0.4.1"
description = """\
frood + birblib: the Python frood surface for Big Little Mesh -- the generated \
bento/banchan contracts and FSM harness, plus the birb archetype layer \
(BirbBento/BirbHandlers/dispatch/...) on top of it.\
"""
requires-python = ">=3.12"
dependencies = [
    # the generated protobuf message classes (bento_pb2, model_pb2, ...).
    "protobuf",
    # the runtime the generated bento FSM harness (bento_fsm) binds to.
    "transitions",
]

# birblib.service's HTTP surface is opt-in: a birb that only wants the bento/handlers/
# daemon never pays for fastapi/uvicorn. install with `big-little-mesh-frood[service]`.
[project.optional-dependencies]
service = [
    "fastapi",
    "uvicorn",
]

# dev-only: linter + tests, plus the service extra so the HTTP surface is exercised in
# CI. the package ships without this group.
[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "fastapi",
    "uvicorn",
    # the FastAPI TestClient (used by the service tests) needs httpx.
    "httpx",
]

# ruff: the lint gate, fleet-consistent at 100 cols. Run from this dir, so it lints the
# hand-written frood package only; the generated gen/ tree (a sibling) is never
# restyled by our rules.
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "N", "T201"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# the wheel ships the hand-written frood and birblib packages plus the generated
# namespace packages, which live in the sibling gen/python tree (buf writes them there). A
# consumer (magpie) installs one distribution and gets the frood surface, the birb
# archetype layer, and the contracts. birblib is a distinct top-level package (not an
# extension of frood), shipped in the same distribution to keep cross-repo installs
# to one git dependency on a connectivity-hostile network (see §9.1: lib name/home is open).
# frood is a PEP 420 NAMESPACE package, deliberately: it spans the hand-written lib
# (python/frood: emit, register, watcher, ...) AND the generated contract package frood.v1
# (gen/python/frood/v1). That is why python/frood has NO __init__.py -- a regular package there
# would shadow the namespace and make `from frood.v1 import frood_pb2` unresolvable, which is
# exactly the import the register-client's generated code does. Do NOT add an __init__.py to
# python/frood. The force-include below merges the generated frood.v1 into the same frood/ tree.
[tool.hatch.build.targets.wheel]
packages = ["frood", "birblib"]

[tool.hatch.build.targets.wheel.force-include]
"../gen/python/bento" = "bento"
"../gen/python/model" = "model"
"../gen/python/observability" = "observability"
# registry.v1 (the /register broker wire, vendored from delightd) and frood.v1 (the universal
# frood interface registry.v1 imports) -- the register-client needs both at runtime, so the
# shipped distribution must carry them, not just bento/model/observability.
"../gen/python/registry" = "registry"
"../gen/python/frood" = "frood"
